# AgentGlass

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
Planner/: Arch_and_Package.md  Description.md  Frameworks.md  More_Features.md  Priority_and_Execution_Plan.md  System_Design.md  V2_Feature_Roadmap.md  temp.txt
apps/daemon/: package.json  tsconfig.json
apps/daemon/src/: blobStore.ts  db.ts  index.ts
apps/dashboard/: package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/cache/: page.tsx
apps/dashboard/app/compare/: page.tsx
apps/dashboard/app/components/: AgentGraph.tsx  AgentNode.tsx  AppShell.tsx  ConnectionStatus.tsx  EventTimeline.tsx  NodeInspector.tsx  Sidebar.tsx  TimeScrubber.tsx  TopBar.tsx  TraceComparePanel.tsx  TraceSelector.tsx
apps/dashboard/app/docs/: page.tsx
apps/dashboard/app/hooks/: useDaemonSocket.ts  useTraceStore.ts
apps/dashboard/app/lib/: daemonApi.ts  demoTrace.ts  eventHelpers.ts  graphLayout.ts
apps/dashboard/app/live/: page.tsx
apps/dashboard/app/settings/: page.tsx
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: demo_langgraph.py  e2e_stress_test.py  vcr_demo.py
sdk-python/src/agentglass_python/: __init__.py  cli.py  client.py  instrumentation.py  langgraph_adapter.py  otel.py  vcr.py
sdk-python/tests/: smoke_test.py
